<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorfondo2"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageZoom" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbars="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <Button
                android:id="@+id/btn_trabajo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/fondo_eventos"
                android:drawableLeft="@drawable/icon_fiesta"
                android:drawablePadding="8dp"
                android:text="@string/menu_eventos"
                android:textColor="@color/colorfondo2"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_empleado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/fondo_pasteleria"
                android:drawableLeft="@drawable/icon_pasteleria"
                android:drawablePadding="8dp"
                android:text="@string/menu_pasteleria"
                android:textColor="@color/colorfondo2"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/fondo_restaurante"
                android:drawableLeft="@drawable/icon_restaurante"
                android:drawablePadding="8dp"
                android:text="@string/menu_restaurante"
                android:textColor="@color/colorfondo2"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_nosotros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/fondo_historia"
                android:drawableLeft="@drawable/icon_historia"
                android:drawablePadding="8dp"
                android:text="@string/menu_historia"
                android:textColor="@color/colorfondo2"
                android:textSize="20dp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/btn_nahuatl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/fondo_equipo"
                android:drawableLeft="@drawable/icon_equipo"
                android:drawablePadding="8dp"
                android:text="@string/menu_equipo"
                android:textColor="@color/colorfondo2"
                android:textSize="20dp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/btn_nahua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@color/colorfondo2"
                android:drawablePadding="8dp"
                android:textSize="20dp"
                 />

        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/ll01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorfondo2"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/btn_llamar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"

            android:background="@drawable/boton_redondo"
            android:text="@string/boton_llamar"
            android:textColor="@color/colorfondo2" />

        <Button
            android:id="@+id/btn_mapa"
            android:layout_width="0dp"
            android:background="@drawable/boton_redondo"
            android:layout_height="wrap_content"
            android:text="@string/boton_mapa"

            android:textColor="@color/colorfondo2"
            android:layout_weight="1"
            android:layout_margin="5dp" />
    </LinearLayout>

</FrameLayout>